# c-project

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  main.c
cmake/: CodeCoverage.cmake
docs/: CMakeLIsts.txt  Doxyfile.in
include/mylib/: mylib.h
src/: CMakeLists.txt  mylib.c  mylib.h.in  utility.h
tests/: CMakeLists.txt  main.c
